glib-macros/tests/clone_compiletest/14-clone-upgrade-or-else-first.rs
fn main() {
    use glib::clone;
    let v = std::rc::Rc::new(1);
    clone!(#[upgrade_or_else] || lol, #[strong] v, move || {println!("foo");});
}
